Fixed bottom footer spacing

--- a/src/components/footer/Footer.module.sass
+++ b/src/components/footer/Footer.module.sass
@@ -65,7 +65,7 @@
             min-width: 1000px  
             p
                 font-size: 12px
-                padding-inline: 50px
+                padding-inline: 25px
                 margin: 0
                 a
                     text-decoration: none
